<FIX> : Navbar links visibility

--- a/app/styles/Menubar.module.css
+++ b/app/styles/Menubar.module.css
@@ -131,10 +131,25 @@
   z-index: 10;
 }
 
+.navbar_subitems_items .link_heading  {
+  padding: 1rem 1rem 0rem 2;
+  font-weight: 700;
+  color: #87898d;
+  width: 18rem;
+  margin-bottom: -1rem;
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.7;
+}
+
 .navbar_subitems_items {
   padding: 1rem 1rem 1rem 2rem;
   width: 18rem;
+  font-weight: lighter;
+  color: black;
 }
+
+
 
 .subItemLinks {
   cursor: pointer;
@@ -197,8 +212,10 @@
   text-decoration: none;
 }
 
-.disabled {
+.link_heading_mobile {
+  font-weight: 700;
   pointer-events: none;
   cursor: default;
   opacity: 0.6;
+  margin-bottom: -0.5rem;
 }
